--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <a href="" class="connect"></a>
             </div>
             <div class="inputWrapper">
-                <form action="">
+                <form class="userInput" action="">
                     <div class="textInput">
                         <input type="text" id="queryInput" name="queryInput" placeholder="Search Keyword(optional)" >
                         <label for="query" class="visuallyHidden">Search Keyword(optional)</label>
@@ -42,6 +42,8 @@
             <P>&copy;Frankie Wang</P>
         </p>
     </footer>
-    <script src='https://code.jquery.com/jquery-3.2.1.min.js' integrity='sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4='crossorigin='anonymous'></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"
+        integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@8"></script>
     <script type="module" src="main.js"></script>
 </body>
