--- a/index.html
+++ b/index.html
@@ -34,8 +34,9 @@
             </div>
         </div>
     </header>
-    <div>    
-    </div>
+    <main>
+        <div class="resultWrapper"></div>
+    </main>
     <footer>
         <p>
             <p>Powered! by Meetup API</p>
