working on results styling

--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
                         <label for="locationInput" class="visuallyHidden">Location(optional)</label>
                     </div>
                     <label for="submitSearch" class="visuallyHidden">submitSearch</label>
-                    <input class="submitButton rounded-sm border-0" type="submit" value="Search" id="submitSearch">
+                    <input class="submitButton btn btn-outline-dark rounded-sm" type="submit" value="Search" id="submitSearch">
                 </form>
             </div>
         </div>
     </header>
     <main>
-        <div class="resultWrapper"></div>
+        <!-- <div class="resultWrapper"></div> -->
     </main>
     <footer>
             <p>Powered! by <a target="_blank" href="https://www.meetup.com/meetup_api/">Meetup API</a></p>
