--- a/index.html
+++ b/index.html
@@ -38,7 +38,10 @@
         </div>
     </header>
     <main>
-        <!-- <div class="resultWrapper"></div> -->
+        <div class="wrapper"></div>
+        <button aria-label="go up to the menu" class="arrowUp border-0">
+            <i aria-hidden class="fas fa-chevron-circle-up"></i>
+        </button>
     </main>
     <footer>
             <p>Powered! by <a target="_blank" href="https://www.meetup.com/meetup_api/">Meetup API</a></p>
