get photo api call, not a lot results

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <h1>Events Finder</h1>
             </div>
             <div class="headerDescription">
-                <p>Can you guess the correct price of these items sold at Walmart in Canadian Dollars without going over?
+                <p>Type in your keywords and place names to discover some great event!🙌
                 </p>
                 <a href="" class="connect"></a>
             </div>
